; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ncurses/ncurses/tinfo/extr_captoinfo.c_push.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ncurses/ncurses/tinfo/extr_captoinfo.c_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stackptr = common dso_local global i64 0, align 8
@MAX_PUSHED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"string too complex to convert\00", align 1
@onstack = common dso_local global i32 0, align 4
@stack = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push() #0 {
  %1 = load i64, i64* @stackptr, align 8
  %2 = load i64, i64* @MAX_PUSHED, align 8
  %3 = icmp sge i64 %1, %2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @_nc_warning(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %12

6:                                                ; preds = %0
  %7 = load i32, i32* @onstack, align 4
  %8 = load i32*, i32** @stack, align 8
  %9 = load i64, i64* @stackptr, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* @stackptr, align 8
  %11 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32 %7, i32* %11, align 4
  br label %12

12:                                               ; preds = %6, %4
  ret void
}

declare dso_local i32 @_nc_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
